--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "firebase": "^11.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.3",
+    "react-router": "^7.7.0",
+    "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
+    "text-encoding": "^0.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
